--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -43,14 +43,14 @@
               <div *ngIf="isPencarian">
                 <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR KARTU HASIL PENCARIAN</h5>
 
-                <table class="table table-hover border">
-                  <thead class="grey lighten-2">
-                    <tr class="col-2 col-form-label" style="color: #2bbbad; font-weight: bold;">
-                      <th scope="col">NOMOR KARTU</th>
-                      <th scope="col">NAMA</th>
-                      <th scope="col">STATUS KARTU</th>
-                      <th scope="col">BLOK</th>
-                      <th scope="col">TUTUP/BUKA</th>
+                <table class="table table-bordered">
+                  <thead class="indigo lighten-4">
+                    <tr class="col-2 col-form-label" style="color: #304FFE; font-weight: bold;">
+                      <th scope="col" style="text-align:center;"><b>NOMOR KARTU</b></th>
+                      <th scope="col" style="text-align:center;"><b>NAMA</b></th>
+                      <th scope="col" style="text-align:center;"><b>STATUS KARTU</b></th>
+                      <th scope="col" style="text-align:center;"><b>BLOK</b></th>
+                      <th scope="col" style="text-align:center;"><b>TUTUP/BUKA</b></th>
                     </tr>
                   </thead>
                   <tr>
