--- a/src/app/kartu/tabskartu/komponen/aktivasi/aktivasi.component.html
+++ b/src/app/kartu/tabskartu/komponen/aktivasi/aktivasi.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <form>
       <ng-container *ngIf="!isProsesAktivasi">
-        <h6 style="color: #2bbbad; font-weight: bold;">KONFIRMASI AKTIVASI KARTU</h6>
+        <h6 style="color: #536DFE; font-weight: bold;">KONFIRMASI AKTIVASI KARTU</h6>
         <hr>
         <div class="form-group row">
           <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
@@ -43,7 +43,7 @@
       </ng-container>
 
       <ng-container *ngIf="isProsesAktivasi">
-        <h6 style="color: #2bbbad; font-weight: bold;">NOTIFIKASI AKTIVASI KARTU</h6>
+        <h6 style="color: #536DFE; font-weight: bold;">NOTIFIKASI AKTIVASI KARTU</h6>
         <div class="form-group row">
           <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
           <label class="col-form-label pr-0  font-weight-bold">:</label>
@@ -57,7 +57,7 @@
 
           <br>
           <span class="col-4">
-            <h6 style="color: #2bbbad; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
+            <h6 style="color: #536DFE; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
           </span>
 
         </div>
