--- a/src/app/kartu/tabskartu/komponen/blokir/blokir.component.html
+++ b/src/app/kartu/tabskartu/komponen/blokir/blokir.component.html
@@ -3,9 +3,9 @@
   <div class="card-body">
     <ng-container *ngIf="!isBlokirProses">
       <form>
-        <h6 style="color: #2bbbad; font-weight: bold;">BLOKIR KARTU</h6>
+        <h6 style="color: #536DFE; font-weight: bold;">BLOKIR KARTU</h6>
         <hr>
-        <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="!isBlokir">Konfirmasi Blokir Kartu</h6>
+        <h6 style="color: #536DFE; font-weight: bold;" *ngIf="!isBlokir">Konfirmasi Blokir Kartu</h6>
 
         <div class="form-group row">
           <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
@@ -59,7 +59,7 @@
     </ng-container>
 
     <ng-container *ngIf="isBlokirProses">
-        <h6 style="color: #2bbbad; font-weight: bold;">NOTIFIKASI BLOKIR KARTU</h6>
+        <h6 style="color: #536DFE; font-weight: bold;">NOTIFIKASI BLOKIR KARTU</h6>
         <hr>
        <div class="form-group row">
           <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
@@ -83,7 +83,7 @@
           <span class="col-6"></span>
 
           <span class="col-4">
-              <h6 style="color: #2bbbad; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
+              <h6 style="color: #536DFE; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
           </span>
 
        </div>
