--- a/src/app/kartu/tabskartu/komponen/buka-blokir/buka-blokir.component.html
+++ b/src/app/kartu/tabskartu/komponen/buka-blokir/buka-blokir.component.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-body">
-    <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="!isBlokirProses && !isNotifikasi">BUKA BLOKIR KARTU</h6>
-    <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="isBlokirProses  && !isNotifikasi">KONFIRMASI BUKA BLOKIR</h6>
-    <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="isNotifikasi">NOTIFIKASI BUKA KARTU</h6>
+    <h6 style="color: #536DFE; font-weight: bold;" *ngIf="!isBlokirProses && !isNotifikasi">BUKA BLOKIR KARTU</h6>
+    <h6 style="color: #536DFE; font-weight: bold;" *ngIf="isBlokirProses  && !isNotifikasi">KONFIRMASI BUKA BLOKIR</h6>
+    <h6 style="color: #536DFE; font-weight: bold;" *ngIf="isNotifikasi">NOTIFIKASI BUKA KARTU</h6>
     <hr>
     <form>
       <ng-container *ngIf="!isBlokirProses && !isNotifikasi">
@@ -88,7 +88,7 @@
             <span class="col-6"></span>
 
             <span class="col-4">
-                <h6 style="color: #2bbbad; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
+                <h6 style="color: #536DFE; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
             </span>
         
           </div>
