--- a/src/app/kartu/tabskartu/komponen/tutup-kartu/tutup-kartu.component.html
+++ b/src/app/kartu/tabskartu/komponen/tutup-kartu/tutup-kartu.component.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-body">
-      <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="isTutupProses  && !isNotifikasi">KONFIRMASI TUTUP KARTU</h6>
-      <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="isNotifikasi">NOTIFIKASI TUTUP KARTU</h6>
-      <h6 style="color: #2bbbad; font-weight: bold;" *ngIf="!isTutupProses  && !isNotifikasi">TUTUP KARTU</h6>
+      <h6 style="color: #536DFE; font-weight: bold;" *ngIf="isTutupProses  && !isNotifikasi">KONFIRMASI TUTUP KARTU</h6>
+      <h6 style="color: #536DFE; font-weight: bold;" *ngIf="isNotifikasi">NOTIFIKASI TUTUP KARTU</h6>
+      <h6 style="color: #536DFE; font-weight: bold;" *ngIf="!isTutupProses  && !isNotifikasi">TUTUP KARTU</h6>
       <hr>
       <form>
         <ng-container *ngIf="!isTutupProses && !isNotifikasi">
@@ -76,7 +76,7 @@
             <span class="col-6"></span>
 
             <span class="col-4">
-                <h6 style="color: #2bbbad; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
+                <h6 style="color: #536DFE; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
             </span>
           </div>
         </ng-container>
