--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -36,7 +36,7 @@
               </div>
               <!--input 2-->
               <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">DATA REKENING DEBIT</label>
+                <label class="col-2 col-form-label font-weight-bold" style="color: #304FFE">DATA REKENING DEBIT</label>
                 <p class="col-3 mt-1 text-danger" *ngIf="inputNoRekeningDebit.invalid && (inputNoRekeningDebit.dirty || inputNoRekeningDebit.touched)">Mohon
                   Inputkan No Rekening </p>
                 <p class="col-3 mt-1 text-danger" *ngIf="inputNilaiDebit.invalid && (inputNilaiDebit.dirty || inputNilaiDebit.touched)">Mohon
@@ -56,7 +56,7 @@
               </div>
               <!--input 3-->
               <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">DATA REKENING KREDIT</label>
+                <label class="col-2 col-form-label font-weight-bold" style="color: #304FFE">DATA REKENING KREDIT</label>
                 <p class="col-3 mt-1 text-danger" *ngIf="inputNoRekKredit.invalid && (inputNoRekKredit.dirty || inputNoRekKredit.touched)">Mohon
                   Inputkan No Rekening Kredit </p>
                 <p class="col-3 mt-1 text-danger" *ngIf="inputNilaiKredit.invalid && (inputNilaiKredit.dirty || inputNilaiKredit.touched)">Mohon
@@ -109,7 +109,7 @@
               </div>
 
               <div class="form-group row">
-                <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">ALAT BANTU</label>
+                <label class="col-2 col-form-label font-weight-bold" style="color: #304FFE">ALAT BANTU</label>
               </div>
               <table style="min-width: 100%;">
                 <tbody>
