--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.html
@@ -44,13 +44,13 @@
           <!--panel 2-->
           <div class="card">
             <div class="card-body">
-              <table class="table table-hover">
-                <thead class="grey lighten-2">
-                  <tr class="font-weight-bold">
-                    <th scope="col">User ID</th>
-                    <th scope="col">Nama</th>
-                    <th scope="col">Login</th>
-                    <th scope="col">Invalidate</th>
+              <table class="table table-bordered">
+                <thead class="indigo lighten-4" style="text-align:center;">
+                  <tr class="col-2 col-form-label" style="color: #304FFE ; font-weight: bold;">
+                    <th scope="col"><b>User ID</b></th>
+                    <th scope="col"><b>Nama</b></th>
+                    <th scope="col"><b>Login</b></th>
+                    <th scope="col"><b>Invalidate</b></th>
                   </tr>
                 </thead>
                 <tbody>
