--- a/src/app/administrative/aktifitasuser/aktifitasuser.component.html
+++ b/src/app/administrative/aktifitasuser/aktifitasuser.component.html
@@ -10,7 +10,7 @@
           <div class="card">
             <div class="card-body">
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">User Id</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -20,7 +20,7 @@
                 <label class="col-2 col-form-label">Super User</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">Nama</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">Jateng SP</label>
@@ -30,7 +30,7 @@
                 <label class="col-2 col-form-label">127.0.0.1</label>
               </div>
 
-              <div class="form-group row">
+              <div class="form-group row mb-0">
                 <label class="col-2 col-form-label font-weight-bold">Waktu Awal</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <label class="col-2 col-form-label">2018/09/09 15:15:15.500</label>
@@ -44,67 +44,62 @@
           </div>
           <!--panel 1-->
           <h5 class="card-title" style="margin-top: 10px;">Daftar User</h5>
-          <!--panel 2-->
-          <div class="card">
-            <div class="card-body">
-              <table class="table table-hover border">
-                <thead class="grey lighten-2">
-                  <tr class="font-weight-bold">
-                    <th scope="col">Tanggal</th>
-                    <th scope="col">Waktu</th>
-                    <th scope="col">User Id</th>
-                    <th scope="col">Aktifitas</th>
-                    <th scope="col">Lihat Detail</th>
-                  </tr>
-                </thead>
-                <tbody>
+          <!-- table material  -->
 
-                  <tr>
-                    <td class="font-weight-normal">24/5/2013</td>
-                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Login Succes</td>
-                    <td class="font-weight-normal">
-                      <i class="fa fa-search fa-search"></i>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="font-weight-normal">24/5/2013</td>
-                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Login Succes</td>
-                    <td class="font-weight-normal">
-                      <i class="fa fa-search fa-search"></i>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="font-weight-normal">24/5/2013</td>
-                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Login Succes</td>
-                    <td class="font-weight-normal">
-                      <i class="fa fa-search fa-search"></i>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td class="font-weight-normal">24/5/2013</td>
-                    <td class="font-weight-normal">{{tanggal | date:'shortTime'}}</td>
-                    <td class="font-weight-normal">Jateng SP</td>
-                    <td class="font-weight-normal">Login Succes</td>
-                    <td class="font-weight-normal">
-                      <i class="fa fa-search fa-search"></i>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-hover">
 
-              <mat-paginator [length]="100" 
-                             [pageSize]="10" 
-                             [pageSizeOptions]="[5, 10, 25, 100]">
-              </mat-paginator>
-            </div>
-          </div>
-          <!--panel 2-->
+            <ng-container matColumnDef="tanggal">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark"> Tanggal </p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.tanggal}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="waktu">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark">Waktu</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.waktu}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="user_id">
+              <th mat-header-cell *matHeaderCellDef>
+                <p class="font-weight-bold h6 text-dark">User ID</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.user_id}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="aktifitas">
+              <th mat-header-cell *matHeaderCellDef class="font-weight-bold">
+                <p class="font-weight-bold h6 text-dark">Aktifitas</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <p class="font-weight-normal">{{element.aktifitas}}</p>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="detail">
+              <th mat-header-cell *matHeaderCellDef class="font-weight-bold">
+                <p class="font-weight-bold h6 text-dark">Lihat Detail</p>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                <button class="btn btn-link" (click)="test(element.user_id)">
+                  <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          <!-- table material -->
 
           <br>
         </div>
