--- a/src/app/administrative/change-offline-limit/change-offline-limit.component.html
+++ b/src/app/administrative/change-offline-limit/change-offline-limit.component.html
@@ -12,12 +12,14 @@
             <div class="form-group row">
               <label class="col-3 col-form-label  font-weight-bold">Current Offline Limit</label>
               <label class="col-form-label pr-0 font-weight-bold">:</label>
-              <div class="col-3 input-group">
-                <input type="text" class="form-control">
-                <div class="input-group-append">
-                  <span class="input-group-text" id="basic-addon2">Ubah</span>
+              <div class="col-3 input-group mb-3">
+                  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+                    aria-describedby="button-addon2">
+                  <div class="input-group-append">
+                    <button mdbBtn color="default" size="md" class="m-0 px-3 py-2" type="button" id="button-addon2"
+                      mdbWavesEffect>Button</button>
+                  </div>
                 </div>
-              </div>
               <span class="col-6"></span>
             </div>
             <!--input1-->
