--- a/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.css
+++ b/src/app/administrative/daftar-user-sign-on/daftar-user-sign-on.component.css
@@ -1,6 +1,10 @@
 table {
   width: 100%;
 }
+
+.mat-row:hover {
+  background-color:lightgrey;
+}
 .mat-header-row{
   background-color: lightgrey;
 }
