--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -65,7 +65,9 @@
             <app-pinjaman></app-pinjaman>
           </mat-tab>
           <!-- Fasilitas -->
-          <mat-tab label="Fasilitas"> Content 5 </mat-tab>
+          <mat-tab label="Fasilitas">
+            <app-fasilitas></app-fasilitas>
+          </mat-tab>
           <!-- Kartu -->
           <mat-tab label="Kartu"> Content 6 </mat-tab>
 
