--- a/src/app/teller-in/teller-in/teller-in.component.html
+++ b/src/app/teller-in/teller-in/teller-in.component.html
@@ -33,7 +33,7 @@
                 <label class="col-2 col-form-label  font-weight-bold">Mata Uang</label>
                 <label class="col-form-label pr-0  font-weight-bold">:</label>
                 <div class="col-3">
-                  <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang" name="optkodempn"
+                  <select class="custom-select" mdbValidate class="form-control" formControlName="mataUang"
                     id="MataUang" style="width: 250px;">
                     <option selected disabled>Pilih Salah Satu</option> 
                     <option value="idr">IDR</option>
@@ -134,7 +134,7 @@
           <p>Keterangan : {{keterangan}}</p>
         </div>
 
-  
+   
 
       </div>
       <div class="modal-footer d-flex justify-content-center">
