--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -20,7 +20,7 @@
       <div class="row panel-style">
         <ul class="border border-light ul-style bg-opacity">
           <li class="font-weight-bold text-white">Status: Online</li>
-          <li class="font-weight-bold text-white">IP Anda: 127.0.0.1</li>
+          <li class="font-weight-bold text-white">IP Anda: {{myIp}}</li>
         </ul>
       </div>
       <div class="row panel-style">
